--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -3,23 +3,26 @@ BACKUP_REMOTE_URL: "mafreebox.free.fr"
 BACKUP_REMOTE_USER: "freebox"
 BACKUP_REMOTE_PATH: "Disque dur/backups"
 
-TRAEFIK_VERSION: "2.2.0"
+TRAEFIK_VERSION: "2.2.8"
 TRAEFIK_FRONT_PORT: "8000"
-TRAEFIK_EXPOSITION: "false"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
+TRAEFIK_USE_LETSENCRYPT: false
+TRAEFIK_CERT_NAME: "forge.local+2"
+TRAEFIK_ENTRYPOINT_MAP:
+  - { port: "{{ NGINX_FRONT_PORT }}", name: "homepage" }
+  - { port: "{{ PORTAINER_PORT }}", name: "portainer" }
+  - { port: "{{ NETDATA_PORT }}", name: "netdata" }
+
 
 NGINX_VERSION: "1.19.0"
 NGINX_FRONT_PORT: "8001"
-NGINX_EXPOSITION: "false"
 NGINX_EXTERNAL_URL: "home.{{ DOMAIN_NAME }}"
 
 PORTAINER_VERSION: "1.24.1"
 PORTAINER_PORT: "8010"
-PORTAINER_EXPOSITION: "false"
 PORTAINER_EXTERNAL_URL: "portainer.{{ DOMAIN_NAME }}"
 
 NETDATA_VERSION: "v1.23.0"
 NETDATA_PORT: "8011"
-NETDATA_EXPOSITION: "false"
 NETDATA_EXTERNAL_URL: "monitor.{{ DOMAIN_NAME }}"
-NETDATA_DEFAULT_STATE: stopped
+NETDATA_DEFAULT_STATE: started
