--- a/roles/infra_ci/tasks/setup_jenkins_plugins.yml
+++ b/roles/infra_ci/tasks/setup_jenkins_plugins.yml
@@ -143,5 +143,28 @@
 - name: "set jenkins container final state ({{ JENKINS_DEFAULT_STATE }})"
   docker_container:
     name: jenkins
+    image: "jenkins:{{ JENKINS_VERSION }}"
     state: "{{ JENKINS_DEFAULT_STATE }}"
-    restart: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
+    recreate: yes
+    restart_policy: always
+    volumes:
+      - "/{{ DATACORE }}/jenkins:/var/jenkins_home"
+    labels:
+      traefik.enable: "true"
+      traefik.http.services.jenkins.loadbalancer.server.port: "8080"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.jenkins_http.middlewares: "https_redirect"
+      traefik.http.routers.jenkins_http.rule: "Host(`{{ JENKINS_EXTERNAL_URL }}`)"
+      traefik.http.routers.jenkins_http.service: jenkins
+      traefik.http.routers.jenkins_https.rule: "Host(`{{ JENKINS_EXTERNAL_URL }}`)"
+      traefik.http.routers.jenkins_https.service: jenkins
+      traefik.http.routers.jenkins_https.tls: "true"
+      # add this to use traefik as a proxy with tls (http will not be available)
+      traefik.http.services.jenkins_proxy.loadbalancer.server.port: "8080"
+      traefik.http.routers.jenkins_proxy.service: jenkins_proxy
+      traefik.http.routers.jenkins_proxy.entrypoints: jenkins
+      traefik.http.routers.jenkins_proxy.rule: "{{ global_proxy_rule }}"
+      traefik.http.routers.jenkins_proxy.tls: "true"
+  become: true
+  become_user: "{{ USER_NAME }}"
