--- a/roles/infra_ci/tasks/setup_gogs.yml
+++ b/roles/infra_ci/tasks/setup_gogs.yml
@@ -1,34 +1,18 @@
 ---
-- name: "Launch gogs container for ARM {{ GOGS_VERSION }}"
-  docker_container:
-    name: "gogs"
-    image: "gogs/gogs-rpi:{{ GOGS_VERSION }}"
-    state: "{{ GOGS_DEFAULT_STATE }}"
-    restart_policy: always
-    recreate: yes
-    timeout: "{{ DOCKER_TIMEOUT }}"
-    log_driver: journald
-    log_options:
-      tag: gogs
-    ports:
-      - "{{ GOGS_FRONT_PORT }}:3000"
-      - "{{ GOGS_SSH_PORT }}:22"
-    labels:
-      traefik.enable: "{{ GOGS_EXPOSITION }}"
-      traefik.http.services.gogs.loadbalancer.server.port: "3000"
-      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
-      traefik.http.routers.gogs_http.middlewares: "https_redirect"
-      traefik.http.routers.gogs_http.rule: "Host(`{{ GOGS_EXTERNAL_URL }}`)"
-      traefik.http.routers.gogs_https.rule: "Host(`{{ GOGS_EXTERNAL_URL }}`)"
-      traefik.http.routers.gogs_https.tls: "true"
-    volumes:
-      - "/{{ DATACORE }}/gogs:/data"
+- name: "Define gogs_image ARM?"
+  set_fact:
+     gogs_image: "gogs/gogs-rpi:{{ GOGS_VERSION }}"
   when: ansible_architecture in ["armv7l", "aarch64"]
 
-- name: "Launch gogs container x64 {{ GOGS_VERSION }}"
+- name: "Define gogs_image amd64?"
+  set_fact:
+     gogs_image: "gogs/gogs:{{ GOGS_VERSION }}"
+  when: ansible_architecture in ["amd64", "x86_64"]
+
+- name: "Launch gogs container {{ GOGS_VERSION }}"
   docker_container:
     name: "gogs"
-    image: "gogs/gogs:{{ GOGS_VERSION }}"
+    image: "{{ gogs_image }}"
     state: "{{ GOGS_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
@@ -37,19 +21,29 @@
     log_options:
       tag: gogs
     ports:
-      - "{{ GOGS_FRONT_PORT }}:3000"
+#      - "{{ GOGS_FRONT_PORT }}:3000"
       - "{{ GOGS_SSH_PORT }}:22"
+    volumes:
+      - "/{{ DATACORE }}/gogs:/data"
     labels:
-      traefik.enable: "{{ GOGS_EXPOSITION }}"
+      traefik.enable: "true"
       traefik.http.services.gogs.loadbalancer.server.port: "3000"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.gogs_http.middlewares: "https_redirect"
       traefik.http.routers.gogs_http.rule: "Host(`{{ GOGS_EXTERNAL_URL }}`)"
+      traefik.http.routers.gogs_http.service: gogs
       traefik.http.routers.gogs_https.rule: "Host(`{{ GOGS_EXTERNAL_URL }}`)"
+      traefik.http.routers.gogs_https.service: gogs
       traefik.http.routers.gogs_https.tls: "true"
-    volumes:
-      - "/{{ DATACORE }}/gogs:/data"
-  when: ansible_architecture in ["amd64", "x86_64"]
+      # add this to use traefik as a proxy with tls (http will not be available)
+      traefik.http.services.gogs_proxy.loadbalancer.server.port: "3000"
+      traefik.http.routers.gogs_proxy.service: gogs_proxy
+      traefik.http.routers.gogs_proxy.entrypoints: gogs
+      traefik.http.routers.gogs_proxy.rule: "{{ global_proxy_rule }}"
+      traefik.http.routers.gogs_proxy.tls: "true"
+  become: true
+  become_user: "{{ USER_NAME }}"
+  when: gogs_image is defined
 
 - name: "Check for gogs configuration file"
   stat:
