--- a/roles/infra_ci/vars/main.yml
+++ b/roles/infra_ci/vars/main.yml
@@ -1,7 +1,6 @@
 GOGS_VERSION: "0.11.91"
 GOGS_FRONT_PORT: "8021"
 GOGS_SSH_PORT: "{{ GIT_SSH_PORT }}"
-GOGS_EXPOSITION: "false"
 GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
 GOGS_DEFAULT_STATE: stopped
 
@@ -9,12 +8,12 @@ GOGS_DEFAULT_STATE: stopped
 JENKINS_VERSION: "2.252"
 JENKINS_SHA_256: "00a1b953586523d71496b468478eae0bc69d34b4ff71b3507065db6c9d49edac"
 JENKINS_PORT: "8023"
-JENKINS_EXPOSITION: "false"
 JENKINS_EXTERNAL_URL: "ci.{{ DOMAIN_NAME }}"
 JENKINS_DEFAULT_STATE: stopped
 JENKINS_VALIDATE_PLUGIN_CERTS: false
 JENKINS_USER: "{{ DEFAULT_ADMIN_NAME }}"
-JENKINS_URL: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ JENKINS_PORT }}"
+JENKINS_PORT_CONFIG: 9000
+JENKINS_URL: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ JENKINS_PORT_CONFIG }}"
 JENKINS_THEME_COLOR: "blue-grey"
 JENKINS_RESTART_DELAY: 100
 
@@ -24,6 +23,5 @@ REDMINE_DB_USER: "redmine_user"
 REDMINE_DB_PASS: "redmine_pass"
 REDMINE_DB_NAME: "redmine"
 REDMINE_FRONT_PORT: "8024"
-REDMINE_EXPOSITION: "false"
 REDMINE_EXTERNAL_URL: "redmine.{{ DOMAIN_NAME }}"
 REDMINE_DEFAULT_STATE: stopped
