--- a/roles/infra_social/tasks/setup_mstream.yml
+++ b/roles/infra_social/tasks/setup_mstream.yml
@@ -10,48 +10,26 @@
   shell: "id -u {{ USER_NAME }}"
   register: user_id
 
-- name: "Launch mstream container for ARM {{ MSTREAM_VERSION }}"
-  docker_container:
-    name: "mstream"
-    image: "linuxserver/mstream:arm32v7-{{ MSTREAM_VERSION }}"
-    state: "{{ MSTREAM_DEFAULT_STATE }}"
-    restart_policy: always
-    recreate: yes
-    timeout: "{{ DOCKER_TIMEOUT }}"
-    ports:
-      - "{{ MSTREAM_PORT }}:3000"
-    env:
-      PUID: "{{ user_id.stdout }}"
-      PGID: "{{ user_id.stdout }}"
-      USER: "{{ DEFAULT_ADMIN_NAME }}"
-      PASSWORD: "{{ MSTREAM_PASS }}"
-      USE_JSON: "true"
-      TZ: "Europe/Paris"
-    labels:
-      traefik.enable: "{{ MSTREAM_EXPOSITION }}"
-      traefik.http.services.mstream.loadbalancer.server.port: "3000"
-      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
-      traefik.http.routers.mstream_http.middlewares: "https_redirect"
-      traefik.http.routers.mstream_http.rule: "Host(`{{ MSTREAM_EXTERNAL_URL }}`)"
-      traefik.http.routers.mstream_https.rule: "Host(`{{ MSTREAM_EXTERNAL_URL }}`)"
-      traefik.http.routers.mstream_https.tls: "true"
-    volumes:
-      - "/{{ DATACORE }}/mstream/config:/config"
-      - "/{{ DATACORE }}/mstream/music:/music"
-  become: true
-  become_user: "{{ USER_NAME }}"
+- name: "Define mstream_image ARM?"
+  set_fact:
+     mstream_image: "linuxserver/mstream:arm32v7-{{ MSTREAM_VERSION }}"
   when: ansible_architecture in ["armv7l", "aarch64"]
 
-- name: "Launch mstream container for x86_64 {{ MSTREAM_VERSION }}"
+- name: "Define mstream_image amd64?"
+  set_fact:
+     mstream_image: "linuxserver/mstream:amd64-{{ MSTREAM_VERSION }}"
+  when: ansible_architecture in ["amd64", "x86_64"]
+
+- name: "Launch mstream container {{ MSTREAM_VERSION }}"
   docker_container:
     name: "mstream"
-    image: "linuxserver/mstream:amd64-{{ MSTREAM_VERSION }}"
+    image: "{{ mstream_image }}"
     state: "{{ MSTREAM_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
-    ports:
-      - "{{ MSTREAM_PORT }}:3000"
+#    ports:
+#      - "{{ MSTREAM_PORT }}:3000"
     env:
       PUID: "{{ user_id.stdout }}"
       PGID: "{{ user_id.stdout }}"
@@ -59,17 +37,25 @@
       PASSWORD: "{{ MSTREAM_PASS }}"
       USE_JSON: "true"
       TZ: "Europe/Paris"
+    volumes:
+      - "/{{ DATACORE }}/mstream/config:/config"
+      - "/{{ DATACORE }}/mstream/music:/music"
     labels:
-      traefik.enable: "{{ MSTREAM_EXPOSITION }}"
+      traefik.enable: "true"
       traefik.http.services.mstream.loadbalancer.server.port: "3000"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.mstream_http.middlewares: "https_redirect"
       traefik.http.routers.mstream_http.rule: "Host(`{{ MSTREAM_EXTERNAL_URL }}`)"
+      traefik.http.routers.mstream_http.service: mstream
       traefik.http.routers.mstream_https.rule: "Host(`{{ MSTREAM_EXTERNAL_URL }}`)"
+      traefik.http.routers.mstream_https.service: mstream
       traefik.http.routers.mstream_https.tls: "true"
-    volumes:
-      - "/{{ DATACORE }}/mstream/config:/config"
-      - "/{{ DATACORE }}/mstream/music:/music"
+      # add this to use traefik as a proxy with tls (http will not be available)
+      traefik.http.services.mstream_proxy.loadbalancer.server.port: "3000"
+      traefik.http.routers.mstream_proxy.service: mstream_proxy
+      traefik.http.routers.mstream_proxy.entrypoints: mstream
+      traefik.http.routers.mstream_proxy.rule: "{{ global_proxy_rule }}"
+      traefik.http.routers.mstream_proxy.tls: "true"
   become: true
   become_user: "{{ USER_NAME }}"
-  when: ansible_architecture in ["amd64", "x86_64"]
+  when: mstream_image is defined
