--- a/roles/infra_social/tasks/setup_peertube.yml
+++ b/roles/infra_social/tasks/setup_peertube.yml
@@ -36,65 +36,26 @@
     labels:
       traefik.enable: "false"
 
-- name: "Launch peertube container for ARM64 {{ PEERTUBE_VERSION }}"
-  docker_container:
-    name: "peertube"
-    image: "ngargaud/peertube:{{ PEERTUBE_VERSION }}-arm64"
-    state: "{{ PEERTUBE_DEFAULT_STATE }}"
-    restart_policy: always
-    recreate: yes
-    timeout: "{{ DOCKER_TIMEOUT }}"
-    ports:
-      - "{{ PEERTUBE_PORT }}:9000"
-    links:
-      - "peertube_redis:redis"
-      - "peertube_postgres:postgres"
-    env:
-      PEERTUBE_ADMIN_EMAIL: "{{ USER_MAIL }}"
-      PEERTUBE_DB_USERNAME: "{{ PEERTUBE_DB_USER }}"
-      PEERTUBE_DB_PASSWORD: "{{ PEERTUBE_DB_PASS }}"
-      PEERTUBE_WEBSERVER_PORT: "{{ PEERTUBE_PORT }}"
-      PEERTUBE_WEBSERVER_HOSTNAME: "{{ PEERTUBE_URL }}"
-      PEERTUBE_WEBSERVER_HTTPS: "{{ PEERTUBE_IS_HTTPS }}"
-      # If you need more than one IP as trust_proxy
-      # pass them as a comma separated array:
-      #PEERTUBE_TRUST_PROXY: ["127.0.0.1", "loopback", "172.18.0.0/16"]
-      #PEERTUBE_SMTP_USERNAME:
-      #PEERTUBE_SMTP_PASSWORD:
-      #PEERTUBE_SMTP_HOSTNAME: postfix
-      #PEERTUBE_SMTP_PORT: 25
-      #PEERTUBE_SMTP_FROM: noreply@domain.tld
-      #PEERTUBE_SMTP_TLS: false
-      #PEERTUBE_SMTP_DISABLE_STARTTLS: false
-      # /!\ Prefer to use the PeerTube admin interface to set the following configurations /!\
-      PEERTUBE_SIGNUP_ENABLED: "false"
-      PEERTUBE_TRANSCODING_ENABLED: "false"
-      PEERTUBE_CONTACT_FORM_ENABLED: "false"
-    labels:
-      traefik.enable: "{{ PEERTUBE_EXPOSITION }}"
-      traefik.http.services.peertube.loadbalancer.server.port: "9000"
-      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
-      traefik.http.routers.peertube_http.middlewares: "https_redirect"
-      traefik.http.routers.peertube_http.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
-      traefik.http.routers.peertube_https.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
-      traefik.http.routers.peertube_https.tls: "true"
-    volumes:
-      - "/{{ DATACORE }}/peertube/config:/config"
-      - "/{{ DATACORE }}/peertube/data:/data"
-  become: true
-  become_user: "{{ USER_NAME }}"
+- name: "Define peertube_image ARM?"
+  set_fact:
+     peertube_image: "ngargaud/peertube:{{ PEERTUBE_VERSION }}-arm64"
   when: ansible_architecture in ["aarch64"]
 
-- name: "Launch peertube container for x86_64 {{ PEERTUBE_VERSION }}"
+- name: "Define peertube_image amd64?"
+  set_fact:
+     peertube_image: "ngargaud/peertube:{{ PEERTUBE_VERSION }}"
+  when: ansible_architecture in ["amd64", "x86_64"]
+
+- name: "Launch peertube container {{ PEERTUBE_VERSION }}"
   docker_container:
     name: "peertube"
-    image: "ngargaud/peertube:{{ PEERTUBE_VERSION }}"
+    image: "{{ peertube_image }}"
     state: "{{ PEERTUBE_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
-    ports:
-      - "{{ PEERTUBE_PORT }}:9000"
+#    ports:
+#      - "{{ PEERTUBE_PORT }}:9000"
     links:
       - "peertube_redis:redis"
       - "peertube_postgres:postgres"
@@ -119,17 +80,25 @@
       PEERTUBE_SIGNUP_ENABLED: "false"
       PEERTUBE_TRANSCODING_ENABLED: "false"
       PEERTUBE_CONTACT_FORM_ENABLED: "false"
+    volumes:
+      - "/{{ DATACORE }}/peertube/config:/config"
+      - "/{{ DATACORE }}/peertube/data:/data"
     labels:
-      traefik.enable: "{{ PEERTUBE_EXPOSITION }}"
+      traefik.enable: "true"
       traefik.http.services.peertube.loadbalancer.server.port: "9000"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.peertube_http.middlewares: "https_redirect"
       traefik.http.routers.peertube_http.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
+      traefik.http.routers.peertube_http.service: peertube
       traefik.http.routers.peertube_https.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
+      traefik.http.routers.peertube_https.service: peertube
       traefik.http.routers.peertube_https.tls: "true"
-    volumes:
-      - "/{{ DATACORE }}/peertube/config:/config"
-      - "/{{ DATACORE }}/peertube/data:/data"
+      # add this to use traefik as a proxy with tls (http will not be available)
+      traefik.http.services.peertube_proxy.loadbalancer.server.port: "9000"
+      traefik.http.routers.peertube_proxy.service: peertube_proxy
+      traefik.http.routers.peertube_proxy.entrypoints: peertube
+      traefik.http.routers.peertube_proxy.rule: "{{ global_proxy_rule }}"
+      traefik.http.routers.peertube_proxy.tls: "true"
   become: true
   become_user: "{{ USER_NAME }}"
-  when: ansible_architecture in ["amd64", "x86_64"]
+  when: peertube_image is defined
